<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/broadcast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen20"
        android:text="@string/broadcast_receiver"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen20"
        android:text="@string/fragment"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/intent_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/broadcast" />

    <Button
        android:id="@+id/intent_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen20"
        android:text="@string/intent_service"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/pending_intent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />

    <Button
        android:id="@+id/pending_intent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen20"
        android:text="@string/pending_intent"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intent_service" />

    <Button
        android:id="@+id/service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen20"
        android:text="@string/service"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/work_manager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pending_intent" />

    <Button
        android:id="@+id/work_manager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen20"
        android:layout_marginEnd="@dimen/dimen20"
        android:text="@string/work_manager"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/service" />

</androidx.constraintlayout.widget.ConstraintLayout>
